# CtrlSpace

./: .gitignore  App.tsx  CLAUDE.md  Cargo.toml  README.md  main.tsx  package-lock.json  package.json  tauri.conf.json
.github/: copilot-instructions.md
src/: main.rs
src-tauri/src/: commands.rs
src/frontend/: App.tsx  index.html  vite.config.ts
src/frontend/store/: store.ts
src/frontend/styles/: index.css
src/src_tauri/: commands.rs  devices.rs  input_parser.rs  mod.rs  steam_controller.rs
