[package]
name = "ctrlspace"
version = "0.1.0"
description = "CtrlSpace app"
authors = [""]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "shell-open"] }
hidapi = "2.6.3"
once_cell = "1.19"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
